# buff-rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: benchmarks.rs
src/: bitpack.rs  codec.rs  decimal_interop.rs  error.rs  lib.rs  precision.rs
